# atlas-openprotocol-cpp

./: .gitignore  LICENSE  README.md
script/: docker.sh  init.sh  linux.sh  packages.sh  windows.bat
src/: CMakeLists.txt
src/app/cpp/: app.cpp
src/cmake/: my_routine.cmake
src/logging/cpp/: logging.cpp
src/logging/include/: logging.hpp
src/logging/test/: test.cpp
src/openprotocol/cpp/: all_rules.cpp  debug.cpp  openprotocol.cpp  parser_message_prefix.cpp  parser_messages.cpp  rule_generic_message.cpp
src/openprotocol/cpp/mid/tightening/: mid0060.cpp  mid0061.cpp
src/openprotocol/include/: all_ast.hpp  all_rules.hpp  ast_adapted.hpp  ast_generic_message.hpp  debug.hpp  message_io.hpp  openprotocol.hpp  parser_message_prefix.hpp  parser_messages.hpp  rule_generic_message.hpp  rule_macro.hpp  uint_parsers.hpp
src/openprotocol/include/mid/: ast_mid_base.hpp
src/openprotocol/include/mid/tightening/: ast_mid0060.hpp  ast_mid0061.hpp  rule_mids.hpp
src/openprotocol/test/: test.cpp  test_message.cpp  test_message_hdr.cpp  test_mids.cpp
src/reference/: client.cpp  echoserver.cpp  parse_single_message.cpp  simple_parser.cpp  struct_parser.cpp  timer.cpp  tuple.cpp  x3-demo.cpp
tools/: dumper.cs  extract_mids.py  handy.py  make_test_cases.py
tools/mustache/: message.mustache
